# sample-pokemon-app

back-end/: .gitignore  config.yml  docker-compose.yml  go.mod  go.sum  pyproject.toml
back-end/cmd/: handlers.go  main.go  routes.go
back-end/database/postgres/: database_setup.sql  dummy_data.sql
back-end/docker/database/: Dockerfile
back-end/internal/api/: api.go  handlers.go
back-end/internal/config/: config.go
back-end/internal/database/: postgres.go
back-end/internal/models/: pokemon.go
back-end/scripts/ingest_data/: ingest_data.go
