[tool.poetry]
name = "back-end"
version = "0.1.0"
description = "The Back-End and API for our Pokemon Application."
authors = ["PossibleNPC"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
